# django-app-metrics

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: main.yml
app_metrics/: __init__.py  admin.py  exceptions.py  managers.py  models.py  reports.py  tasks.py  trending.py  urls.py  utils.py  views.py
app_metrics/backends/: composite.py  db.py  librato.py  mixpanel.py  redis.py  statsd.py
app_metrics/management/commands/: metrics_aggregate.py  metrics_send_mail.py  move_to_mixpanel.py  move_to_statsd.py
app_metrics/migrations/: 0001_initial.py  0002_auto_20181008_1758.py  0002_initial.py  0003_alter_gauge_current_value_alter_gauge_id_and_more.py  0004_alter_metric_id_alter_metricset_id.py  0004_auto__add_field_metric_company__chg_field_metric_slug__chg_field_metri.py  0004_auto__add_field_metric_company__chg_field_metric_slug__del_unique_metr.py
app_metrics/templates/app_metrics/: email.txt
app_metrics/tests/: __init__.py  base_tests.py  mixpanel_tests.py  redis_tests.py  statsd_tests.py  urls.py
demo_app/demo_app/: __init__.py  celery_app.py  settings.py  settings_test.py
demo_app/eep_program/: apps.py  models.py
demo_app/relationship/: apps.py  models.py
docs/: backends.rst  changelog.rst  conf.py
docs/ref/: utils.rst
