[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pivotal-app-metrics"
dynamic = ["version"]
description = "django-app-metrics is a reusable Django application for tracking and emailing application metrics."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "analytics",
    "development",
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "django>=4.2",
    "celery",
    "django-environ",
]

[project.optional-dependencies]
test = [
    "mysqlclient",
    "flake8",
    "tox",
    "coverage",
    "pre-commit",
    "black",
    "bandit"
]

[project.urls]
Issues = "https://github.com/pivotal-energy-solutions/django-app-metrics/issues"
Download = "https://github.com/pivotal-energy-solutions/django-app-metrics/archive/4.0.4.tar.gz"
Homepage = "https://github.com/pivotal-energy-solutions/django-app-metrics"
Thanks = "https://saythanks.io/to/rh0dium"
"Original Source" = "https://github.com/frankwiles/django-app-metrics"

[tool.hatch.version]
path = "app_metrics/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/app_metrics",
    "/app_metrics/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ['app_metrics']
include = [
    "/app_metrics/static/**/*",
    "/app_metrics/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
/static/.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.coverage.run]
branch = true
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 75
ignore_errors = true
