[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pivotal-app-metrics"
dynamic = ["version"]
description = "django-app-metrics is a reusable Django application for tracking and emailing application metrics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "analytics",
    "development",
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "django>=5.0",
    "celery",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "coverage",
    "pre-commit",
    "bandit",
    "black",
    "ruff"
]

[project.urls]
Issues = "https://github.com/pivotal-energy-solutions/django-app-metrics/issues"
Homepage = "https://github.com/pivotal-energy-solutions/django-app-metrics"
Thanks = "https://saythanks.io/to/rh0dium"
"Original Source" = "https://github.com/frankwiles/django-app-metrics"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/app_metrics",
    "/app_metrics/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ['app_metrics']
include = [
    "/app_metrics/static/**/*",
    "/app_metrics/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '(\.git|.venv|_build|build|dist|.*\/__pycache__\/)'

[tool.ruff]
line-length = 100
lint.ignore = ["F401", "F405"]

[tool.bandit]
targets = ['app_metrics']
exclude_dirs = ["app_metrics/tests", "demo_app"]
skips = ["B310", "B101"]


[tool.coverage.run]
branch = true
command_line = "demo_app/manage.py test --noinput --settings=demo_app.settings_test app_metrics"
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 72
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo_app"]
version_files = ["app_metrics/__init__.py"]
repo = "pivotal-energy-solutions/django-app-metrics"
report = "out.json"
